Fix dependencies on graphql-typed

--- a/packages/graphql-fixtures/package.json
+++ b/packages/graphql-fixtures/package.json
@@ -27,5 +27,8 @@
     "@types/faker": "^4.1.2",
     "faker": "^4.1.0",
     "graphql-tool-utilities": "^0.7.2"
+  },
+  "peerDependencies": {
+    "graphql-typed": "^0.1.2"
   }
 }
