--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -43,7 +43,9 @@
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
     "graphql": "^0.13.2",
-    "graphql-tool-utilities": "^0.7.2",
+    "graphql-tool-utilities": "^0.7.2"
+  },
+  "peerDependencies": {
     "graphql-typed": "^0.1.2"
   }
 }
