--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -23,16 +23,20 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/jest-mock-apollo/README.md",
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.12",
-    "apollo-client": "^2.2.8",
-    "apollo-link": "^1.2.1",
+    "apollo-link": "^1.2.2",
     "graphql": "^0.13.2",
-    "graphql-tool-utilities": "^0.6.2"
+    "graphql-tool-utilities": "^0.7.4"
   },
   "devDependencies": {
     "@shopify/react-apollo": "^2.0.7",
+    "apollo-cache-inmemory": "^1.2.4",
+    "apollo-client": "^2.3.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "typescript": "~2.7.2"
+  },
+  "peerDependencies": {
+    "apollo-cache-inmemory": "^1.2.4",
+    "apollo-client": "^2.3.4"
   }
 }
