--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "noUnusedLocals": true,
     "lib": [
       "dom",
-      "es2015"
+      "es2015",
+      "esnext.asynciterable"
     ]
   },
   "exclude": [
