--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "publish": "lerna publish",
+    "precommit": "yarn plop docs",
     "prebuild": "yarn run clean",
     "build": "lerna run build",
     "lint": "yarn eslint '**/*.{ts,tsx}'",
@@ -35,12 +36,12 @@
     "@types/jest": "^23.1.1",
     "@types/react-helmet": "^5.0.6",
     "codecov": "^3.0.2",
-    "ejs": "^2.6.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^5.0.0",
     "eslint-plugin-shopify": "^22.1.0",
     "graphql-tag": "^2.8.0",
+    "husky": "^0.14.3",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.2.0",
     "jest-transform-graphql": "^2.1.0",
@@ -49,8 +50,6 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
-    "remark": "^9.0.0",
-    "remark-toc": "^5.0.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^22.4.2",
     "typescript": "~2.9.2"
