--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Shopify's javascript application utilities",
   "engines": {
-    "node": ">=v8.9.4",
+    "node": ">=8.10.0",
     "yarn": ">=1.3.2"
   },
   "scripts": {
