:construction_worker: Adding CI for docs

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "scripts": {
     "publish": "lerna publish",
-    "precommit": "yarn plop docs",
     "prebuild": "yarn run clean",
     "build": "lerna run build",
     "lint": "yarn eslint '**/*.{ts,tsx}'",
+    "ci:lint-docs": "yarn generate docs && test -z \"$(git status --porcelain)\"",
     "test": "jest --maxWorkers=3",
     "check": "lerna run check",
     "release": "lerna publish && git push --follow-tags",
@@ -41,7 +41,6 @@
     "eslint": "^5.0.0",
     "eslint-plugin-shopify": "^22.1.0",
     "graphql-tag": "^2.8.0",
-    "husky": "^0.14.3",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.2.0",
     "jest-transform-graphql": "^2.1.0",
