--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -23,8 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-form-state/README.md",
   "dependencies": {
-    "lodash-decorators": "^6.0.0",
-    "lodash-es": "^4.17.10"
+    "lodash": "^4.17.10",
+    "lodash-decorators": "^6.0.0"
   },
   "peerDependencies": {
     "react": "^16.4.1"
