--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -30,6 +30,7 @@
     "react": "^16.4.1"
   },
   "devDependencies": {
+    "@shopify/enzyme-utilities": "^1.1.0",
     "@types/enzyme": "^3.1.10",
     "enzyme": "^3.3.0",
     "faker": "^4.1.0",
