🎨 [react-shortcuts] Add better key types (#171)

--- a/packages/react-shortcuts/tsconfig.json
+++ b/packages/react-shortcuts/tsconfig.json
@@ -4,7 +4,15 @@
   "compilerOptions": {
     "outDir": "./dist",
     "baseUrl": "./src",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "lib": [
+      "dom",
+      "es2015",
+      "es2016",
+      "es2017",
+      "esnext.asynciterable",
+      "dom.iterable"
+    ]
   },
   "include": [
     "src/**/*.ts"
