--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,8 +10,8 @@
     "**/.git": true,
     "**/.svn": true,
     "**/.hg": true,
-    "**/.DS_Store": true,
     "**/node_modules": true,
+    "**/.DS_Store": true,
     "build": true,
     ".dev": true
   },
@@ -26,9 +26,6 @@
   "editor.formatOnSave": true,
   "prettier.stylelintIntegration": true,
   "prettier.eslintIntegration": true,
-  "eslint.validate": [
-    "typescript",
-    "typescriptreact"
-  ],
+  "eslint.validate": ["typescript", "typescriptreact"],
   "javascript.implicitProjectConfig.experimentalDecorators": true
 }
