--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es5",
+    "downlevelIteration": true,
     "esModuleInterop": true,
     "declaration": true,
     "jsx": "react",
@@ -15,12 +16,11 @@
     "lib": [
       "dom",
       "es2015",
+      "es2016",
+      "es2017",
+      "es2018",
       "esnext.asynciterable"
     ]
   },
-  "exclude": [
-    "./node_modules",
-    "**/*.test.ts",
-    "**/*.test.tsx",
-  ]
+  "exclude": ["./node_modules", "**/*.test.ts", "**/*.test.tsx"]
 }
