--- a/service.yml
+++ b/service.yml
@@ -4,6 +4,7 @@ owners:
   - tzvipm
 audience: partner
 classification: library
+ci_url: https://travis-ci.org/Shopify/quilt
 slack_channels:
   - library-extraction
   - web-foundation
