--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -43,6 +43,7 @@
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
     "graphql": "^0.13.2",
+    "graphql-config": "^2.0.0",
     "graphql-tool-utilities": "^0.7.4"
   },
   "peerDependencies": {
