--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "noUnusedParameters": true,
     "experimentalDecorators": true,
     "target": "es2015",
-    "lib": ["es2015", "es2016", "es2017", "esnext.asynciterable"]
+    "lib": ["dom", "es2015", "es2016", "es2017", "esnext.asynciterable"]
   },
   "include": ["./test/setup.ts", "./**/*.ts"],
   "exclude": ["./**/node_modules", "./**/*.graphql.d.ts"]
