🏗️ modify tsconfig setup to allow editors to correctly infer local modules (#265)

--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -10,7 +10,7 @@
     "@shopify:registry": "https://registry.npmjs.org"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --p tsconfig.build.json",
     "prepublishOnly": "yarn run build"
   },
   "author": "Shopify Inc.",
