Update renamed Slack channels (#272)

--- a/service.yml
+++ b/service.yml
@@ -7,5 +7,5 @@ audience: partner
 classification: library
 ci_url: https://travis-ci.org/Shopify/quilt
 slack_channels:
-  - library-extraction
-  - web-foundation
+  - quilt
+  - web-foundation-tech
