--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@shopify/dates",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
-  "description": "Lightweight date operations.",
+  "description": "Lightweight date operations library.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
