--- a/packages/koa-shopify-auth/package.json
+++ b/packages/koa-shopify-auth/package.json
@@ -33,5 +33,6 @@
     "@shopify/jest-dom-mocks": "^2.0.8",
     "@types/safe-compare": "^1.1.0",
     "typescript": "~3.0.1"
-  }
+  },
+  "sideEffects": false
 }
