--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -30,5 +30,6 @@
     "@shopify/jest-koa-mocks": "^2.0.11",
     "@shopify/with-env": "^1.0.6",
     "typescript": "~3.0.1"
-  }
+  },
+  "sideEffects": false
 }
