Move koa dependencies to dev-dependencies
koa-liveness-ping, koa-metrics and koa-shopify-auth only depend upon the
types of koa, they do not use the package directly. Thus it is not a
runtime dependency.

Tweak dependency versions so we use a consistant version across all
packages

--- a/packages/koa-liveness-ping/package.json
+++ b/packages/koa-liveness-ping/package.json
@@ -22,13 +22,11 @@
     "url": "https://github.com/shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/koa-liveness-ping/README.md",
-  "dependencies": {
-    "koa": "^2.5.1"
-  },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.0.12",
-    "@types/koa": "^2.0.45",
+    "@types/koa": "^2.0.44",
     "@types/koa-mount": "^3.0.1",
+    "koa": "^2.5.0",
     "koa-mount": "^3.0.0",
     "typescript": "~3.0.1"
   },
