--- a/packages/koa-metrics/package.json
+++ b/packages/koa-metrics/package.json
@@ -23,12 +23,13 @@
   },
   "homepage": "https://github.com/shopify/quilt/blob/master/packages/koa-metrics/README.md",
   "dependencies": {
-    "hot-shots": "^5.4.1",
-    "koa": "^2.5.1"
+    "hot-shots": "^5.4.1"
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.0.12",
+    "@types/koa": "^2.0.44",
     "@shopify/with-env": "^1.0.7",
+    "koa": "^2.5.0",
     "typescript": "~3.0.1"
   },
   "sideEffects": false
