--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -28,6 +28,7 @@
     "typescript": "~3.0.1"
   },
   "dependencies": {
+    "@shopify/i18n": "^0.1.0",
     "@types/hoist-non-react-statics": "^3.0.1",
     "hoist-non-react-statics": "^3.0.1",
     "prop-types": "^15.6.2",
