--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -32,8 +32,10 @@
     "@types/hoist-non-react-statics": "^3.0.1",
     "hoist-non-react-statics": "^3.0.1",
     "prop-types": "^15.6.2",
-    "react": "^16.2.0",
     "react-tree-walker": "^4.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "peerDependencies": {
+    "react": "^16.0.0"
+  }
 }
