--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "@types/graphql": "^0.13.0",
     "apollo-codegen": "^0.20.0",
-    "core-js": "^2.4.1"
+    "core-js": "^2.4.1",
+    "graphql-config": "^2.0.0"
   }
 }
