--- a/packages/jest-dom-mocks/package.json
+++ b/packages/jest-dom-mocks/package.json
@@ -25,8 +25,9 @@
   "dependencies": {
     "@shopify/javascript-utilities": "^2.1.0",
     "@types/fetch-mock": "^6.0.1",
+    "@types/lolex": "^2.1.3",
     "fetch-mock": "^6.3.0",
-    "lolex": "^2.3.2"
+    "lolex": "^2.7.5"
   },
   "devDependencies": {
     "typescript": "~3.0.1"
