--- a/packages/graphql-tool-utilities/package.json
+++ b/packages/graphql-tool-utilities/package.json
@@ -30,8 +30,9 @@
   },
   "dependencies": {
     "@types/graphql": "^0.13.0",
-    "apollo-codegen": "^0.20.0",
+    "apollo-codegen-core": "0.20.1",
     "core-js": "^2.4.1",
-    "graphql-config": "^2.0.0"
+    "graphql": "0.13.2",
+    "graphql-config": "2.1.0"
   }
 }
