--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.1.1",
     "@types/react-helmet": "^5.0.6",
+    "@types/enzyme": "^3.1.13",
     "codecov": "^3.0.2",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.0.0",
     "eslint-plugin-shopify": "^23.1.0",
     "graphql-tag": "^2.8.0",
