--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/address/README.md",
   "devDependencies": {
     "@shopify/jest-dom-mocks": "^2.1.0",
+    "@shopify/address-mocks": "^1.0.2",
     "typescript": "~3.0.1"
   },
   "sideEffects": false
