--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.1.1",
     "@types/react-helmet": "^5.0.6",
+    "@types/enzyme": "^3.1.10",
     "codecov": "^3.0.2",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
