--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.5",
     "@types/react-helmet": "^5.0.6",
+    "@types/react": "16.3.18",
     "codecov": "^3.0.2",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -55,6 +56,9 @@
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
     "typescript": "~3.0.1"
+  },
+  "resolutions": {
+    "@types/react": "16.3.18"
   },
   "dependencies": {}
 }
