Add linting for full lodash package (#376)
* Add linting for full lodash package

* Remove blank value in dateTimeParts array

* Add ts-ignore to pass ci

--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
   "extends": [
     "plugin:shopify/typescript-react",
     "plugin:shopify/typescript-prettier"
-  ]
+  ],
+  "rules": {
+    "shopify/restrict-full-import": ["error", "lodash"]
+  }
 }
