--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@shopify/app-bridge": "^0.7.3",
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.5",
