--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/network",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "Common values related to dealing with the network",
   "main": "dist/index.js",
@@ -22,9 +22,10 @@
     "url": "https://github.com/shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/network/README.md",
-  "dependencies": {},
   "devDependencies": {
     "typescript": "~3.0.1"
   },
-  "files": ["dist/*"]
+  "files": [
+    "dist/*"
+  ]
 }
