--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -29,7 +29,9 @@
     "typescript": "~3.0.1"
   },
   "files": [
-    "dist/*"
+    "dist/*",
+    "server.js",
+    "server.d.ts"
   ],
   "peerDependencies": {
     "react": ">=16.0.0"
