--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -29,10 +29,10 @@
   },
   "dependencies": {
     "@shopify/i18n": "^0.1.0",
+    "@shopify/react-effect": "^1.0.0",
     "@types/hoist-non-react-statics": "^3.0.1",
     "hoist-non-react-statics": "^3.0.1",
-    "prop-types": "^15.6.2",
-    "react-tree-walker": "^4.3.0"
+    "prop-types": "^15.6.2"
   },
   "sideEffects": false,
   "peerDependencies": {
