Add react-network (#409)

--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "plugin:shopify/typescript-prettier"
   ],
   "rules": {
+    "react/jsx-no-bind": "off",
     "shopify/restrict-full-import": ["error", "lodash"]
   }
 }
