--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -5,13 +5,13 @@
   "description": "Common values related to dealing with the network",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "scripts": {
     "build": "tsc --p tsconfig.build.json",
     "prepublishOnly": "yarn run build"
   },
   "publishConfig": {
-    "access": "public",
-    "@shopify:registry": "https://registry.npmjs.org"
+    "access": "public"
   },
   "author": "Shopify Inc.",
   "repository": {
