--- a/packages/graphql-typescript-definitions/test/fixtures/all-clear/.graphqlconfig
+++ b/packages/graphql-typescript-definitions/test/fixtures/all-clear/.graphqlconfig
@@ -1,7 +1,5 @@
 {
   "schemaPath": "schema.json",
-  "includes": ["documents/**/*.graphql"],
-  "extensions": {
-    "schemaTypesPath": "schema.ts"
-  }
+  "includes": ["documents/**/*.graphql"]
+
 }
