--- a/packages/graphql-typescript-definitions/test/fixtures/malformed-query/.graphqlconfig
+++ b/packages/graphql-typescript-definitions/test/fixtures/malformed-query/.graphqlconfig
@@ -1,7 +1,4 @@
 {
   "schemaPath": "schema.json",
-  "includes": ["documents/**/*.graphql"],
-  "extensions": {
-    "schemaTypesPath": "schema.ts"
-  }
+  "includes": ["documents/**/*.graphql"]
 }
