--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -11,7 +11,8 @@
     "prepublishOnly": "yarn run build"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "@shopify:registry": "https://registry.npmjs.org"
   },
   "author": "Shopify Inc.",
   "repository": {
