--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/enzyme": "^3.1.10",
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.5",
-    "@types/react-helmet": "^5.0.6",
     "@types/react": "16.3.18",
+    "@types/react-helmet": "^5.0.6",
     "codecov": "^3.0.2",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -55,6 +55,7 @@
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
+    "tslib": "^1.9.3",
     "typescript": "~3.0.1"
   },
   "resolutions": {
