Add support for title, meta, and link tags to @shopify/react-html (#427)

--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -23,8 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-html/README.md",
   "dependencies": {
-    "@shopify/react-serialize": "^1.0.10",
-    "react-helmet": "^5.2.0"
+    "@shopify/react-serialize": "^1.0.10"
   },
   "peerDependencies": {
     "react": "^16.3.2",
