--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.5",
     "@types/react": "16.3.18",
+    "@types/react-dom": "^16.0.11",
     "@types/react-helmet": "^5.0.6",
     "codecov": "^3.0.2",
     "enzyme": "^3.6.0",
