--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-effect",
-  "version": "1.0.2",
+  "version": "1.1.0-beta.0",
   "license": "MIT",
   "description": "A component and set of utilities for performing effects within a universal React app",
   "main": "dist/index.js",
@@ -23,8 +23,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-effect/README.md",
   "dependencies": {
-    "tslib": "^1.9.3",
-    "@shopify/react-traverse-nodes": "^0.1.0-beta.0"
+    "@shopify/react-traverse-nodes": "^0.1.0-beta.1",
+    "tslib": "^1.9.3"
   },
   "devDependencies": {
     "typescript": "~3.0.1"
