--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "1.0.4",
+  "version": "1.0.5-beta.0",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application.",
   "main": "dist/index.js",
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-network/README.md",
   "dependencies": {
     "@shopify/network": "^1.2.1",
-    "@shopify/react-effect": "^1.0.2",
+    "@shopify/react-effect": "^1.1.0-beta.0",
     "@types/koa": "^2.0.46",
     "tslib": "^1.9.3"
   },
