--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "6.1.0-beta.0",
+  "version": "6.1.0-beta.1",
   "license": "MIT",
   "description": "A component to render your react app with no static HTML.",
   "main": "dist/index.js",
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-html/README.md",
   "dependencies": {
+    "@shopify/react-effect": "^1.1.0-beta.1",
     "@shopify/react-serialize": "^1.0.11",
     "tslib": "^1.9.3"
   },
