✨ add a tophat script (#431)
* ✨ add a tophat script

* 👌 use default command

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "check": "lerna run check",
     "release": "lerna publish && git push --follow-tags",
     "clean": "rimraf './packages/*/dist/**/*.{js,d.ts}'",
-    "generate": "yarn plop"
+    "generate": "yarn plop",
+    "tophat": "node ./bin/tophat.js"
   },
   "repository": {
     "type": "git",
