--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -23,10 +23,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/react-effect/README.md",
   "dependencies": {
-    "react-tree-walker": "^4.3.0",
+    "@shopify/useful-types": "^1.1.0",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
+    "@types/react-dom": "^16.0.11",
     "typescript": "~3.0.1"
   },
   "files": [
