--- a/packages/jest-mock-apollo/package.json
+++ b/packages/jest-mock-apollo/package.json
@@ -28,10 +28,10 @@
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@shopify/react-apollo": "^2.0.7",
     "apollo-cache-inmemory": "^1.2.4",
     "apollo-client": "^2.3.4",
     "react": "^16.2.0",
+    "react-apollo": "^2.4.1",
     "react-dom": "^16.2.0",
     "typescript": "~3.0.1"
   },
