--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@shopify/async": "^1.0.0",
     "@shopify/javascript-utilities": "^2.4.0",
+    "@shopify/react-effect": "^2.0.1",
     "@shopify/useful-types": "^1.1.2"
   },
   "devDependencies": {
