:ok_hand: Chris lint

--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -44,5 +44,10 @@
   "sideEffects": false,
   "peerDependencies": {
     "react": "^16.0.0"
-  }
+  },
+  "files": [
+    "dist/*",
+    "babel.d.ts",
+    "babel.js"
+  ]
 }
