--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
   "devDependencies": {
     "@types/fs-extra": "^5.0.2",
     "@types/glob": "^5.0.35",
-    "@types/graphql": "^0.13.0",
+    "@types/graphql": "^14.0.0",
     "@types/jest": "^22.2.3",
     "@types/node": "^10.0.4",
     "@types/yargs": "^11.0.0",
     "eslint": "^4.19.1",
     "eslint-plugin-shopify": "^22.0.0",
-    "graphql": "0.13.2",
+    "graphql": "^14.0.0",
     "in-publish": "^2.0.0",
     "jest": "^22.4.3",
     "jest-extended": "^0.7.2",
