--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -36,11 +36,13 @@
     "@babel/types": "^7.0.0-beta.46",
     "@types/babel-generator": "^6.25.1",
     "@types/chokidar": "^1.7.0",
+    "@types/graphql": "^14.0.0",
     "chalk": "^2.4.1",
     "change-case": "^3.0.1",
     "chokidar": "^2.0.3",
     "fs-extra": "^6.0.0",
     "glob": "^7.1.2",
+    "graphql": "^14.0.0",
     "graphql-tool-utilities": "^0.9.2"
   },
   "peerDependencies": {
