upgrading to GraphQL v14

--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     "@types/jest": "^23.3.5",
     "@types/react": "16.8.2",
     "@types/react-helmet": "^5.0.6",
+    "apollo-cache-inmemory": "^1.4.0",
+    "apollo-client": "^2.4.9",
     "codecov": "^3.0.2",
     "element-closest": "^3.0.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "eslint": "^5.0.0",
     "eslint-plugin-shopify": "^23.1.0",
-    "graphql-tag": "^2.8.0",
+    "graphql": "^14.0.0",
+    "graphql-tag": "^2.10.0",
     "isomorphic-fetch": "^2.2.1",
     "jest": "^23.6.0",
     "jest-enzyme": "^7.0.1",
@@ -55,6 +58,7 @@
     "plop": "^2.0.0",
     "prettier": "^1.14.0",
     "react": "^16.8.1",
+    "react-apollo": "^2.2.3",
     "react-dom": "^16.8.1",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
