--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -27,10 +27,12 @@
     "@shopify/async": "^1.2.1",
     "@shopify/react-async": "^1.2.4",
     "@shopify/useful-types": "^1.1.1",
-    "graphql-typed": "^0.3.0",
-    "react-apollo": ">=2.1.0 <3.0.0"
+    "apollo-client": "^2.4.9",
+    "graphql-typed": "^0.4.0",
+    "react-apollo": ">=2.2.3 <3.0.0"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.0",
     "typescript": "~3.0.1"
   },
   "files": [
