--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.3",
     "@types/jest": "^23.3.5",
     "@types/react": "16.8.2",
+    "@types/react-dom": "^16.8.3",
     "@types/react-helmet": "^5.0.6",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.3.8",
@@ -57,9 +58,9 @@
     "lerna": "^2.9.0",
     "plop": "^2.0.0",
     "prettier": "^1.14.0",
-    "react": "^16.8.1",
+    "react": "^16.8.5",
     "react-apollo": "^2.2.3",
-    "react-dom": "^16.8.1",
+    "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
@@ -68,6 +69,7 @@
   },
   "dependencies": {},
   "resolutions": {
-    "@types/react": "16.8.2"
+    "@types/react": "16.8.10",
+    "@types/react-dom": "16.8.3"
   }
 }
