--- a/.eslintignore
+++ b/.eslintignore
@@ -1,2 +1,2 @@
 *.d.ts
-packages/graphql-typescript-definitions/test/fixtures/**/schema.ts
+packages/graphql-typescript-definitions/test/fixtures/**/*.ts
