--- a/packages/graphql-typed/package.json
+++ b/packages/graphql-typed/package.json
@@ -25,7 +25,6 @@
     "@types/graphql": "^14.0.0",
     "graphql": "^14.0.0"
   },
-  "devDependencies": {
-    "typescript": "^2.8.3"
-  }
+  "devDependencies": {},
+  "dependencies": {}
 }
