--- a/packages/graphql-typescript-definitions/package.json
+++ b/packages/graphql-typescript-definitions/package.json
@@ -28,13 +28,12 @@
     "@types/chalk": "^2.2.0",
     "@types/common-tags": "^1.4.0",
     "common-tags": "^1.7.2",
-    "ts-node": "^6.0.2",
-    "typescript": "^2.8.3"
+    "ts-node": "^8.0.3"
   },
   "dependencies": {
-    "@babel/generator": "^7.0.0-beta.46",
-    "@babel/types": "^7.0.0-beta.46",
-    "@types/babel-generator": "^6.25.1",
+    "@babel/generator": "^7.4.0",
+    "@babel/types": "^7.4.0",
+    "@types/babel__generator": "^7.0.2",
     "@types/chokidar": "^1.7.0",
     "@types/graphql": "^14.0.0",
     "chalk": "^2.4.1",
