--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -35,7 +35,5 @@
     "graphql-tool-utilities": "^0.10.0",
     "yargs": "^11.0.0"
   },
-  "devDependencies": {
-    "typescript": "^2.8.3"
-  }
+  "devDependencies": {}
 }
