--- a/packages/predicates/package.json
+++ b/packages/predicates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/predicates",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "license": "MIT",
   "description": "A set of common Javascript predicates",
   "main": "dist/index.js",
@@ -23,9 +23,10 @@
     "url": "https://github.com/shopify/quilt/issues"
   },
   "homepage": "https://github.com/Shopify/quilt/blob/master/packages/predicates/README.md",
-  "dependencies": {},
   "devDependencies": {
     "typescript": "~3.2.1"
   },
-  "files": ["dist/*"]
+  "files": [
+    "dist/*"
+  ]
 }
