--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "lerna": "^2.9.0",
     "plop": "^2.0.0",
     "prettier": "^1.14.0",
-    "react": "^16.8.5",
+    "react": "16.9.0-alpha.0",
     "react-apollo": "^2.2.3",
-    "react-dom": "^16.8.5",
+    "react-dom": "16.9.0-alpha.0",
     "react-helmet": "^5.2.0",
     "rimraf": "^2.6.2",
     "ts-jest": "^23.10.4",
