Refactor polyfills package (#792)

--- a/packages/polyfills/tsconfig.build.json
+++ b/packages/polyfills/tsconfig.build.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compileOnSave": false,
   "compilerOptions": {
-    "outDir": "./",
+    "outDir": "./dist",
     "baseUrl": "./src",
     "rootDir": "./src"
   },
